# SmartHealth-LLM

./: .dockerignore  .env.example  .gitignore  .runtime.txt  .~lock.ti.xls#  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README (3).md  README.md  app.py  asset-manifest.json  docker-compose.yml  index.html  main.py  mayo_diseases.csv  nginx.conf  outputs.txt  pyproject.toml  requirements.txt  s.ipynb  skin_disease_prediction.ipynb  skin_disease_predictor.py  streamlit_app.py  ti.xls  transfaer.ipynb  web_scrapping.ipynb
.github/workflows/: deploy-frontend.yml  python-test.yml  update-scores.yml  update_scores.yml
backend/: Dockerfile  README.md  agent_orchestrator.py  config.py  main.py  memory.py  requirements.fastapi.txt  requirements.txt  streamlit_app.py  tool_registry.py
backend/agents/: base_agent.py  chitchat_agent.py  decider_agent.py  disease_info_agent.py  disease_info_gent.py  formatter_agent.py  image_diagnosis_agent.py  symptom_agent.py
backend/api/: upload.py
backend/data/: labels.json  (+1 more)
data/: mayo_diseases.csv  test.json  test_symptom_cases.csv
evaluation/: evaluate_rag_symptom.py  rag_model_score.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json
notebook/: llm.ipynb  llm.py  mayo_diseases.csv  model.ipynb  skin_disease_prediction.ipynb  skin_disease_prediction.py  transfaer.ipynb  web_scrapping.ipynb
scripts/: benchmark_model.py  benchmark_ner_model.py  build_disease_db.py  fuzzy_match_tester_tool.py  symptoms_to_vectordb.py  test_db_coverage.py  test_fuzzy_matching.py  update_readme.py
tests/: test_llm.py
(+74 files in other folders)
